django_docker_k8s/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: your-dockerhub-username/django-docker-k8s:latest  # Replace with your DockerHub image
        ports:
        - containerPort: 8000
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
