django_docker_k8s/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer  # Change to NodePort for Minikube

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP  # Internal access only
